--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -9,8 +9,8 @@ name: OpenWrt-CI
 
 on:
   push:
-    branches: 
-      - master
+    paths:
+      - 'do_buid.txt'
 #  schedule:
 #    - cron: 0 20 * * *
 #  release:
