--- a/.config
+++ b/.config
@@ -214,7 +214,7 @@ CONFIG_GRUB_BOOTOPTS=""
 CONFIG_GRUB_TIMEOUT="0"
 CONFIG_GRUB_TITLE="OpenWrt"
 # CONFIG_ISO_IMAGES is not set
-# CONFIG_VDI_IMAGES is not set
+CONFIG_VDI_IMAGES=y
 CONFIG_VMDK_IMAGES=y
 # CONFIG_TARGET_IMAGES_GZIP is not set
 
@@ -2413,7 +2413,7 @@ CONFIG_PACKAGE_kmod-usb-net-rtl8152=y
 # CONFIG_PACKAGE_kmod-usb-net-sr9700 is not set
 # CONFIG_PACKAGE_kmod-usb-ohci is not set
 # CONFIG_PACKAGE_kmod-usb-ohci-pci is not set
-CONFIG_PACKAGE_kmod-usb-printer=y
+# CONFIG_PACKAGE_kmod-usb-printer is not set
 # CONFIG_PACKAGE_kmod-usb-serial is not set
 CONFIG_PACKAGE_kmod-usb-storage=y
 CONFIG_PACKAGE_kmod-usb-storage-extras=y
@@ -2847,14 +2847,14 @@ CONFIG_PACKAGE_luci-app-rclone_INCLUDE_fuse-utils=y
 # CONFIG_PACKAGE_luci-app-samba4 is not set
 CONFIG_PACKAGE_luci-app-sfe=y
 # CONFIG_PACKAGE_luci-app-softethervpn is not set
-CONFIG_PACKAGE_luci-app-ssrserver-python=y
+# CONFIG_PACKAGE_luci-app-ssrserver-python is not set
 # CONFIG_PACKAGE_luci-app-syncdial is not set
 # CONFIG_PACKAGE_luci-app-ttyd is not set
 CONFIG_PACKAGE_luci-app-unblockmusic=y
 CONFIG_UnblockNeteaseMusic_Go=y
 CONFIG_UnblockNeteaseMusic_NodeJS=y
-CONFIG_PACKAGE_luci-app-usb-printer=y
-CONFIG_PACKAGE_luci-app-v2ray-server=y
+# CONFIG_PACKAGE_luci-app-usb-printer is not set
+# CONFIG_PACKAGE_luci-app-v2ray-server is not set
 # CONFIG_PACKAGE_luci-app-verysync is not set
 CONFIG_PACKAGE_luci-app-vlmcsd=y
 CONFIG_PACKAGE_luci-app-vsftpd=y
@@ -2867,8 +2867,8 @@ CONFIG_PACKAGE_luci-app-zerotier=y
 #
 # 4. Themes
 #
-CONFIG_PACKAGE_luci-theme-argon=y
-CONFIG_PACKAGE_luci-theme-netgear=y
+# CONFIG_PACKAGE_luci-theme-argon is not set
+# CONFIG_PACKAGE_luci-theme-netgear is not set
 # end of 4. Themes
 
 #
@@ -2894,10 +2894,7 @@ CONFIG_PACKAGE_default-settings=y
 # CONFIG_PACKAGE_luci-i18n-ipsec-vpnd-zh-cn is not set
 # CONFIG_PACKAGE_luci-i18n-ramfree-zh-cn is not set
 # CONFIG_PACKAGE_luci-i18n-sfe-zh-cn is not set
-# CONFIG_PACKAGE_luci-i18n-ssrserver-python-zh-cn is not set
 # CONFIG_PACKAGE_luci-i18n-unblockmusic-zh-cn is not set
-# CONFIG_PACKAGE_luci-i18n-usb-printer-zh-cn is not set
-# CONFIG_PACKAGE_luci-i18n-v2ray-server-zh-cn is not set
 # CONFIG_PACKAGE_luci-i18n-vlmcsd-zh-cn is not set
 # CONFIG_PACKAGE_luci-i18n-vsftpd-zh-cn is not set
 # CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn is not set
@@ -3031,22 +3028,7 @@ CONFIG_UnblockNeteaseMusicGo_INCLUDE_GOPROXY=y
 #
 # Project V
 #
-CONFIG_PACKAGE_v2ray=y
-
-#
-# V2Ray Configuration
-#
-CONFIG_V2RAY_COMPRESS_GOPROXY=y
-# CONFIG_V2RAY_JSON_V2CTL is not set
-CONFIG_V2RAY_JSON_INTERNAL=y
-# CONFIG_V2RAY_JSON_NONE is not set
-CONFIG_V2RAY_EXCLUDE_V2CTL=y
-CONFIG_V2RAY_EXCLUDE_ASSETS=y
-CONFIG_V2RAY_COMPRESS_UPX=y
-CONFIG_V2RAY_DISABLE_NONE=y
-# CONFIG_V2RAY_DISABLE_CUSTOM is not set
-# end of V2Ray Configuration
-
+# CONFIG_PACKAGE_v2ray is not set
 # CONFIG_PACKAGE_v2ray-plugin is not set
 CONFIG_v2ray-plugin_INCLUDE_GOPROXY=y
 # end of Project V
